# DotPOAP

./: AFRICAN_EVENTS_ENHANCEMENT_SUMMARY.md  FRONTEND_ENHANCEMENT_SUMMARY.md  FRONTEND_GAP_ANALYSIS.md  README.md  WALLET_CONNECTION_IMPLEMENTATION.md
backend/: Cargo.toml  lib.rs
frontend/: README.md  WALLET_CONNECTION_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedHeroText.tsx  ConnectionStatus.tsx  CreateEventForm.tsx  EventDashboard.tsx  EventDetailModal.tsx  EventsOverview.tsx  Footer.tsx  HeroSection.tsx  MintPoapDialog.tsx  Navigation.tsx  NetworkStatus.tsx  PoapDesignUpload.tsx  QRCodeGenerator.tsx  ThemeToggle.tsx  UserOnboarding.tsx  WalletConnectButton.tsx  WalletConnection.tsx  WalletInstallHelper.tsx
frontend/src/components/ui/: button.tsx
frontend/src/config/: polkadot.ts
frontend/src/contexts/: PolkadotContext.tsx
frontend/src/contracts/: dotpoap.json
frontend/src/hooks/: useContract.ts
frontend/src/pages/: About.tsx  Claim.tsx  Events.tsx  FAQ.tsx  Index.tsx  MyPoaps.tsx  WalletDemo.tsx
frontend/src/services/: contractService.ts
frontend/src/utils/: contractTest.ts  smoothScroll.ts  walletDetection.ts
